--- a/invisi-link.html
+++ b/invisi-link.html
@@ -2,7 +2,7 @@
 <html>
     <title>Invisi-link</title>
     <div style="text-align: left; font-size: 12px; 
-    color:red; background-color: yellow;">
+    color:red; background-color: red;">
     <a href="you-lose.html">
         hiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
     </a>
