--- a/invisi-link.html
+++ b/invisi-link.html
@@ -2,9 +2,9 @@
 <html>
     <title>Invisi-link</title>
     <div style="text-align: left; font-size: 12px; 
-    color:red; background-color: red;">
+    color:rgb(255, 0, 0); background-color: red;">
     <a href="you-lose.html">
-        hiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
+        .
     </a>
     </div>
 </html>
