--- a/sport scores/sportscores.html
+++ b/sport scores/sportscores.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
     <title>Sport-scores.</title>
-    <a href=https://michaeleldar.github.io/sportscores/rugby.html"
+    <a href="https://michaeleldar.github.io/sportscores/rugby.html"
