--- a/invisi-link.html
+++ b/invisi-link.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <title>Invisi-link</title>
-    <div style="text-align: left; font-size: 12px; 
-    color:rgb(255, 0, 0); background-color: red;">
-    <a href="you-lose.html">
-                                                                    .
-    </a>
-    </div>
+    <head>
+        <title>Play Invisi-link!!!</title>
+        <style>
+            body {
+                background-color: rgb{255, 0, 0};
+            }
+            
+            a {
+                color: rgb{255, 0, 0};
+            }
+        </style>
+    </head>
+    <body>
+        <a href="you-lose.html">text</a>
+    </body>
 </html>
